src/ecommerce/components/home/_sideBySide.scss
@use '../../scss/ecommerceStyles' as m;
@use '../../../sass/functions' as f;

.sideBySide {
  position: relative;
  display: flex;
  align-items: center;
  gap: var(--ecoGap);
  width: 100%;
  height: fit-content;
  padding: 0 var(--sectionXPadding) var(--sectionYPadding) var(--sectionXPadding);
  background-color: var(--elemBackgroundPrimaryOffset);
  @media (width <= 980px) {
    flex-direction: column;
  }
  &:after {
    content: '';
    position: absolute;
    bottom: -32px;
    left: 0;
    width: 100%;
    height: f.rem(32);
    z-index: 10;
    border-bottom-right-radius: f.rem(64);
    border-bottom-left-radius: f.rem(64);
    background-color: var(--elemBackgroundPrimaryOffset);
    @media (width > 981px) {
    }
  }
  &__textArea {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: calc(var(--ecoGap) / 4);
    width: 50%;
    height: fit-content;
    @media (width <= 980px) {
      width: 100%;
      height: auto;
    }
    & h2 {
      display: flex;
      flex-direction: column;
      width: fit-content;
      @include m.ecoSectionHeader;
      @media (width <= 467px) {
        font-size: clamp(f.rem(20), f.rem(28) + 1vw, f.rem(34));
      }
    }
    & p {
      width: clamp(20ch, 100%, 55ch);
    }
    & a {
      margin-top: calc(var(--ecoGap) / 4);
      @include m.ecoBtn;
      @include m.ecoBtnDark;
      width: fit-content;
    }
  }
  &__video {
    display: flex;
    justify-content: flex-end;
    width: 50%;
    height: inherit;
    @media (width <= 980px) {
      width: 100%;
      height: auto;
      justify-content: center;
    }
    & figure video {
      aspect-ratio: 0.8/1;
      border-radius: var(--ecoBorderRadius);
      box-shadow: var(--shadowSoft);
      object-fit: contain;
      pointer-events: unset;
    }
  }
}

